--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,28 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Base Case: {.6} {\"1\":3} ",
+            "name": "Base Case",
             "type": "debugpy",
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "args": ["-happinessCount","{\"1\":3}","-populationDensity",".6"]
+            // "args": ["-k",".8"]
         },
         {
-            "name": "Base Case: {.6} {\"1\":4} ",
+            "name": "High Case",
             "type": "debugpy",
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "args": ["-happinessCount","{\"1\":4}","-populationDensity",".6"]
-        },
-        {
-            "name": "Base Case: {.6} {\".8\":3,\".2\":5} ",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "main.py",
-            "console": "integratedTerminal",
-            "args": ["-happinessCount","{\".8\":3,\".2\":5}","-populationDensity",".6"]
+            "args": ["-k",".999"]
         }
     ]
 }
